--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro');
 
+/* TODO: Make css mobile first */
+
 /* 
  *
  * Document Elements
@@ -24,6 +26,11 @@ body {
 h1 {
     color:#000000;
     font-size:40px;
+}
+
+hr {
+	color:#dbdbdb;
+	border-top: 1px solid #dbdbdb !important;
 }
 
 /* 
@@ -85,7 +92,7 @@ ul.nav li.navicon a:hover{
 }
 
 /* For mobile screens, remove all of the nav links and replace it with a expandable menu button. */
-@media screen and (max-width:680px) {
+@media only screen and (max-width:800px) {
 	ul.nav li:not(:last-child) {
 		 display: none;
 	}
@@ -100,9 +107,9 @@ ul.nav li.navicon a:hover{
 }
 
 /* The actual responsive menu classes */
-@media screen and (max-width:680px) {
+@media only screen and (max-width:800px) {
 	ul.nav.responsive{
-		position: relative; 
+		position: absolute; 
 		flex-direction: column;
 		display: flex;
 	}
@@ -158,6 +165,10 @@ footer{
 	margin-bottom: 70px !important;
 }
 
+.footer-muted {
+	background-color:#e5e5e5;
+}
+
 /* 
  *
  * Main Content
@@ -181,6 +192,10 @@ footer{
     padding: 175px 0px 225px;
 }
 
+.scouting-top-padding{
+    padding: 150px 0px 100px;
+}
+
 /* Floating box in center */
 .main-center-float{
     text-align:center;
@@ -192,7 +207,7 @@ footer{
 
 .signup-button{
     font-size: 20px;
-    margin:5px;
+    margin: 5px;
 }
 
 .no-border-button{
@@ -258,14 +273,196 @@ footer{
 }
 
 .section.panel3{
-    height:650px;
-    background-image:url('/media/nightcity.jpg');
+    /*background-image:url('/media/nightcity.jpg');
     background-repeat: no-repeat;
-    background-size:  cover;
+    background-size:  cover;*/
     /*-webkit-box-shadow: inset -1px -6px 10px 0px rgba(0,0,0,0.5);
     -moz-box-shadow: inset -1px -6px 10px 0px rgba(0,0,0,0.5);
     box-shadow: inset -1px -6px 10px 0px rgba(0,0,0,0.5);*/
 }
+
+.panel3 {
+	padding:40px 0px;
+	background-color:rgba(25,25,25,0);
+	text-align: center;
+}
+
+/* Scouting UI */
+
+.scouting-background3 {
+	background-color:#e5e5e5;
+}
+
+.scouting-background{
+	background-image: url('/images/winning-team.jpg') !important;
+  	background-repeat: no-repeat;
+    background-size: cover;
+	background-attachment: fixed;
+	background-position: center;
+	position:fixed;
+	width:100%;
+	height:100%;
+	top:0;
+	left:0;
+	z-index:-1;
+	-webkit-filter: blur(3px);
+  	-moz-filter: blur(3px);
+  	-o-filter: blur(3px);
+  	-ms-filter: blur(3px);
+  	filter: blur(3px);
+}
+
+.scouting-background2{
+	background-image: url('/images/FTCrobotics.jpg') !important;
+  	background-repeat: no-repeat;
+    background-size: cover;
+	background-attachment: fixed;
+	background-position: center;
+	position:fixed;
+	width:100%;
+	height:100%;
+	top:0;
+	left:0;
+	z-index:-1;
+	-webkit-filter: blur(3px);
+  	-moz-filter: blur(3px);
+  	-o-filter: blur(3px);
+  	-ms-filter: blur(3px);
+  	filter: blur(3px);
+}
+
+.scouting-button{
+    font-size: 30px;
+	width: 200px;
+    margin: 5px;
+}
+
+.editform {
+	background-color: #e5e5e5;
+	padding: 0px 20px 30px;
+	border-radius: 5px;
+}
+
+.scouting-buttons {
+	background-color: #e5e5e5;
+	padding: 0px 20px;
+	border-radius: 5px;
+}
+
+.teamform {
+	text-align: left;
+	font-size: 20px;
+}
+
+table, th, .teamlabel {
+	padding-right: 20px;
+}
+
+table, .teamtable {
+	font-size: 18px;
+}
+
+.teamedit {
+	font-size: 18px;
+}
+
+.teamedit-text {
+	vertical-align: top;
+}
+
+.teamedit-input {
+	margin: 5px 0px 10px;
+	font-size: 20px !important;
+	width: 100%;
+}
+
+.teamedit-checkbox {
+	width: 20px !important;
+	height: 20px !important;
+}
+
+.teamedit-btn {
+	width: 100% !important;
+}
+
+.teamsearch-input {
+	margin: 5px 0px 10px;
+	font-size: 20px !important;
+	width: 100%;
+}
+
+.teamsearch-checkbox {
+	width: 20px !important;
+	height: 20px !important;
+}
+
+.teamsearch-btn {
+	width: 100% !important;
+}
+
+.teamedit-textarea {
+	width: 100%;
+	height: 200px;
+}
+
+.teamheading {
+	font-weight:bold;
+}
+
+.teamsearch-padding {
+	border-spacing: 5px;
+	padding: 0px 5px;
+}
+
+@media screen and (min-width:680px) {
+	.teamedit-label {
+		padding-right: 50px;
+	}
+
+	.teamedit-input {
+		margin: 5px 0px 10px;
+		width: 800px;
+	}
+	
+	.teamsearch-btn {
+		width: 810px !important;
+	}
+	
+	.teamsearch-label {
+		padding-right: 50px;
+	}
+
+	.teamsearch-input {
+		margin: 5px 0px 10px;
+		width: 400px;
+	}
+	
+	.teamedit-btn {
+		width: 800px !important;
+	}
+	
+	
+	.teamedit-textarea {
+		width: 800px;
+		height: 200px;
+	}
+}
+
+/*
+#scout2{
+	background-color:rgba(127, 174, 104,1) !important;
+	border-color: rgba(127, 174, 104,1) !important;
+}
+
+#scout3{
+	background-color:rgba(236, 100, 100, 1) !important;
+	border-color: rgba(236, 100, 100, 1) !important;
+}
+
+#scout4{
+	background-color:rgba(141, 91, 242, 1) !important;
+	border-color:rgba(141, 91, 242, 1) !important;
+}*/
 
 /* Special Classes */
 
@@ -300,9 +497,22 @@ footer{
 	transform: scale(1.1);
 }
 
+.img-logo {
+	object-fit: scale-down;
+}
+
 .right {
     position: absolute;
     right: 10px;
+}
+
+.text-white {
+	color:#000000;
+	font-size: 30px;
+}
+
+.add-btn {
+	width: 93% !important;
 }
 
 /* Other stuff */
