--- a/style/main.css
+++ b/style/main.css
@@ -334,7 +334,7 @@ footer{
 .scouting-button{
     font-size: 30px;
 	width: 100%;
-    margin: 5px;
+	margin: 5px;
 }
 
 .editform {
@@ -403,6 +403,18 @@ table, .teamtable {
 .teamedit-textarea {
 	width: 100%;
 	height: 200px;
+}
+
+.comment-textarea {
+	width: 50%;
+	height: 75px;
+}
+
+.comment {
+	margin: 10px 0px;
+	padding: 10px;
+	border-radius: 5px;
+	background-color: #ffffff;
 }
 
 .teamheading {
